<resources>
    <string name="app_name">Harvest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="action_sign_in_succesful">Log In Successful</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signIn_choose_farmer">Farmer</string>
    <string name="signIn_choose_foreman">Foreman</string>
    <string name="signIn_choose_create">Don\'t Have An Account</string>
    <string name="signIn_choose_tip">Would you like to sign in as a</string>
    <string name="signIn_choose_or">or a</string>
    <string name="signIn_choose_alternatively">or alternatively</string>
    <string name="signIn_foreman_phone">Phone Number</string>
    <string name="signIn_foreman_phoneWarning">We will send you an SMS with a verification code.</string>
    <string name="signIn_foreman_fail">Failure signing in or registering, please try again.</string>
    <string name="signIn_foreman_fail_invalidNumber">Invalid phone number.</string>
    <string name="signIn_foreman_fail_SMS">SMS quota exceeded, in which case, please try again later.</string>
    <string name="signIn_foreman_verificationTip">We\'ve sent you a verification code via SMS, please enter it below once you\'ve received it.</string>
    <string name="signIn_foreman_verificationCOde">Verification Code</string>
    <string name="signIn_foreman_verificationOkay">Okay</string>
    <string name="signIn_foreman_verificationResend">Resend</string>
    <string name="signIn_foreman_verificationCancel">Cancel</string>
    <string name="signIn_foreman_numberTip">Your number, as saved in the system, is shown below, please ensure that your employer has you saved with the same number as seen below, and that you are flagged as a foreman.</string>
    <string name="signIn_foreman_farmChooseTip">You are assigned to multiple organisations, please select the one you wish to work for for this session, and press okay to continue.</string>
    <string name="signIn_foreman_farmNone">You do not work for any organisation, and will be unable to continue.</string>
    <string name="signIn_foreman_farmOne">You are assigned to the organisation seen below.</string>
    <string name="signIn_foreman_goBack">Go Back</string>
    <string name="farmerID_Pref">farmerID_Pref_8701297856420847507893465</string>
    <string name="prompt_enter_email">Email</string>
    <string name="prompt_enter_password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="prompt_enter_surname">Surname</string>
    <string name="prompt_enter_firstName">First name</string>
    <string name="prompt_enter_newPassword">New Password</string>
    <string name="prompt_enter_username">Username</string>
    <string name="prompt_enter_organization">Organization Name</string>
    <string name="forgotAccountDetails"><a>Forgot account details?</a></string>
    <string name="prompt_confirm_Password">Confirm Password</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="app_shared_prefrences">HARVEST_ SHARED_PREFRENCES</string>
    <string name="start">Start</string>
    <string name="loginWithGoogle">Log in with Google</string>
    <string name="title_activity_settings">Settings</string>
    <string name="bottomYieldTracker">Yield Collector</string>
    <string name="bottomInformation">Information</string>
    <string name="bottomSession">Session</string>
    <string name="menuLeave">Log Off</string>
    <string name="menuSettings">Settings</string>
    <string name="menuSearch">Search</string>
    <string name="titleInformation">Information</string>
    <string name="infoFarms">Farms</string>
    <string name="infoWorkers">Workers</string>
    <string name="infoOrchards">Orchards</string>
    <string name="notFound">Not Found</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Delete</string>
    <string name="no">Cancel</string>
    <string name="info_farm_name">Farm Name:</string>
    <string name="info_farm_further">Further Information:</string>
    <string name="info_farm_assignedOrchards">Assigned Orchards:</string>
    <string name="info_farm_company">Company Name:</string>
    <string name="info_farm_email">Farm Email:</string>
    <string name="info_farm_phone">Contact Number:</string>
    <string name="info_farm_province">Province:</string>
    <string name="info_farm_town">Nearest Town:</string>
    <string name="info_orch_name">Orchard Name:</string>
    <string name="info_orch_crop">Orchard Crop:</string>
    <string name="info_orch_loc">Orchard Location</string>
    <string name="info_orch_mass">Bag Mass:</string>
    <string name="info_orch_irig">Irrigation Type:</string>
    <string-array name="info_orch_irig_options">
        <item>Micro</item>
        <item>Drip</item>
        <item>Floppy</item>
        <item>Drag Lines</item>
        <item>Other</item>
        <item>None (dry land)</item>
    </string-array>
    <string name="info_orch_date">Date Planted:</string>
    <string name="info_orch_farm">Assigned Farm:</string>
    <string name="info_orch_work">Assigned Workers:</string>
    <string name="info_orch_row">Row Spacing:</string>
    <string name="info_orch_tree">Tree Spacing:</string>
    <string name="info_orch_cult">Cultivars:</string>
    <string name="info_orch_further">Further Information:</string>
    <string name="info_orch_map_hold">Tap to place a point. Repeat for each corner of the field going in a clockwise direction.</string>
    <string name="info_orch_map_remAll">Remove All</string>
    <string name="info_orch_map_remLast">Remove Last Point</string>
    <string name="info_orch_map_permissionDialog_message">We would like access to your location so that you can find yourself on the map, making the orchard easier to find. It\'s alright if you don\'t want to give it to us, you\'ll just need to find the orchard from scratch!</string>
    <string name="info_orch_map_permissionDialog_title">Location Permission</string>
    <string name="info_orch_map_permissionDialog_okay">Continue</string>
    <string name="info_orch_map_locTitle">Location Information</string>
    <string name="info_orch_map_locMes">Your Location Information seems to be disabled, would you like to enable it so you can find yourself on the map?</string>
    <string name="info_orch_map_locYes">Yes</string>
    <string name="info_orch_map_locNo">No</string>
    <string name="info_orch_map_locNever">Do Not Ask Again</string>
    <string name="info_work_fName">Worker Name:</string>
    <string name="info_work_sName">Worker Surname:</string>
    <string name="info_work_id">ID Number:</string>
    <string name="info_work_role">Is a foreman?</string>
    <string name="info_work_phone">Phone Number:</string>
    <string name="info_work_further">Further Information:</string>
    <string name="info_work_orchard">Assigned Orchards:</string>
    <string name="info_work_fore_off">Worker</string>
    <string name="info_work_fore_on">Foreman</string>
    <string name="info_none_tip">Press the green plus button at the bottom right to add %1$s</string>
    <string name="info_tut_cFarm">Create at least one farm, by pressing the farms button, to begin.</string>
    <string name="info_tut_cOrchard">Now create at least one orchard, by pressing the orchards button.</string>
    <string name="info_tut_cWorker">Finally, create at least one worker, by pressing the workers button.</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_account_key">pref_account_account_key</string>
    <string name="pref_account_category_login">Login Details</string>
    <string name="pref_account_category_login_key">pref_account_category_login_key</string>
    <string name="pref_account_email">Update Email</string>
    <string name="pref_account_email_key">pref_account_email_key</string>
    <string name="pref_account_password">Update Password</string>
    <string name="pref_account_password_key">pref_account_password_key</string>
    <string name="pref_account_category_extra">Extra Account Information</string>
    <string name="pref_account_category_extra_key">pref_account_category_extra_key</string>
    <string name="pref_account_organization">Organization Name</string>
    <string name="pref_account_organization_key">pref_account_organization_key</string>
    <string name="pref_account_fname">First Name</string>
    <string name="pref_account_fname_key">pref_account_fname_key</string>
    <string name="pref_account_sname">Surname</string>
    <string name="pref_account_sname_key">pref_account_sname_key</string>
    <string name="pref_account_category_management">Account Management</string>
    <string name="pref_account_category_management_key">pref_account_category_management_key</string>
    <string name="pref_account_delete">Delete Account</string>
    <string name="pref_account_delete_key">pref_account_delete_key</string>
    <string name="pref_account_delete_alert_title">Are you sure?</string>
    <string name="pref_account_delete_alert_message">You are about to delete your account.
        \nAll related information, such as workers, orchards, sessions, and etc will be deleted.
        \nYou will be unable to recover this information if you make a new account.</string>
    <string name="pref_account_delete_alert_yes">Delete Account</string>
    <string name="pref_account_delete_alert_no">Cancel</string>
    <string name="pref_account_delete_alert_sure_title">Are you sure you\'re sure?</string>
    <string name="pref_account_delete_alert_sure_message">Everything will be lost.\n\nForever.\n\nThat\'s a long time…</string>
    <string name="pref_account_delete_alert_sure_yes">No Going Back</string>
    <string name="pref_account_delete_alert_sure_no">Cancel</string>
    <string name="pref_account_reAuth">Please confirm your sign in details.</string>
    <string name="pref_account_reAuthAgain">Sign in details incorrect, please try again.</string>
    <string name="pref_account_reAuthCancel">Cancel</string>
    <string name="pref_account_reAuthConfirm">Confirm</string>
    <string name="pref_help_key">pref_help_key</string>
    <string name="pref_help_header">Help</string>
    <string name="pref_help_intro">Restart Introduction</string>
    <string name="pref_help_intro_key">pref_help_intro_key</string>
    <string name="pref_help_tutorial">Restart Tutorial</string>
    <string name="pref_help_tutorial_key">pref_help_tutorial_key</string>
    <string name="pref_help_man">Open Manual</string>
    <string name="pref_help_man_key">pref_help_man_key</string>
    <string name="pref_help_man_sum">WARNING: Over 16MiB in Size; Use WiFi.</string>
    <string name="stats_farm_title">Farm Comparison</string>
    <string name="stats_orch_title">Orchard Comparison</string>
    <string name="sessionDetailStartDate">Time Started</string>
    <string name="sessionDetailEndDate">Time Ended</string>
    <string name="sessionDetailForemanName">Foreman</string>
    <string name="sessionDetailsViewPickups">Tracked Path and Collection Points</string>
</resources>