<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgrdsmaller"
    android:id="@+id/backgroundHarvest"
    tools:context=".SignIn_Farmer">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
            android:text="@string/app_name"
            style="@style/TextView.Heading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:hint="@string/prompt_email"
                        style="@style/EditText"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:hint="@string/prompt_enter_password"
                        style="@style/EditText"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Button"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btnLoginWithGoogle"
                    style="@style/Button"
                    android:background="@color/colorGoogleRed"
                    android:text="@string/loginWithGoogle" />

                <TextView
                    android:id="@+id/linkForgotAccountDetails"
                    android:text="@string/forgotAccountDetails"
                    style="@style/TextView.links"
                    android:gravity="bottom|center"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>