<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrdsmallerblurlight">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/app_name"
                style="@style/TextView.Heading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signIn_choose_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_choose_tip"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/signIn_choose_farmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_choose_farmer"
                    android:background="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:onClick="choseFarmer"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/signIn_choose_tip"/>

                <TextView
                    android:id="@+id/signIn_choose_or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_choose_or"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/signIn_choose_farmer"/>

                <Button
                    android:id="@+id/signIn_choose_foreman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_choose_foreman"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:background="@color/colorPrimary"
                    android:onClick="choseForeman"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/signIn_choose_or"/>

                <TextView
                    android:id="@+id/signIn_choose_alt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_choose_alternatively"
                    android:textAlignment="center"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@id/signIn_choose_create" />

                <Button
                    android:id="@+id/signIn_choose_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_choose_create"
                    android:background="@color/colorAccent"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:onClick="choseNew"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>