<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signIn_foreman_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TextView.Heading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signIn_foreman_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/signIn_foreman_phone_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signIn_foreman_phone"
                        android:inputType="phone"
                        android:layout_marginTop="16dp" />

                    <TextView
                        android:id="@+id/signIn_foreman_warning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signIn_foreman_phoneWarning"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/signIn_foreman_failure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signIn_foreman_fail"
                        android:textColor="@android:color/holo_red_dark"
                        android:visibility="gone"
                        android:layout_marginTop="16dp" />
                </LinearLayout>


        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/signIn_foreman_butt_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:onClick="loginClickForeman"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>