<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adapter.SessionDetails">

    <TextView
        android:id="@+id/sessionDetailStartDateTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/sessionDetailStartDate"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintTop_toBottomOf="@+id/sessionDetailForemanTextView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/sessionDetailEndDateTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/sessionDetailEndDate"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintTop_toBottomOf="@+id/sessionDetailStartDateTextView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/sessionDetailForemanTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/sessionDetailForemanName"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/sessionDetailsViewPickups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionDetailEndDateTextView" />
</android.support.constraint.ConstraintLayout>